Creating add item form

--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -6,7 +6,7 @@
     <title>To Do List</title>
 </head>
 <body>
-    <h1>Things I need to do:</h1>
+    <h1>Things I need todo:</h1>
 
     <table>
         {% for item in items %}
@@ -21,5 +21,7 @@
             <tr><td>You have nothing to do</td></tr>
         {% endfor %}
     </table>
+
+    <a href="/add">Add an Item</a>
 </body>
 </html>
