--- a/todo/templates/todo/add_item.html
+++ b/todo/templates/todo/add_item.html
@@ -10,7 +10,7 @@
 
     <form method="POST" action="add">
         {% csrf_token %}
-        {{ form }}
+        {{ form.as_p }}
         <div>
             <p>
                 <button type="submit">Add Item</button>
