--- a/todo/templates/todo/edit_item.html
+++ b/todo/templates/todo/edit_item.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
+    <title>Edit Item</title>
 </head>
 <body>
     <h1>Edit a to do item:</h1>
